--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "css-modules.d.ts",
+    "fix-css.d.ts"
   ],
   "exclude": ["node_modules"]
 }
